fix body overflow

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
     font-style: normal;
     font-variation-settings: "GRAD" 0;
     line-height: 1.4;
+    overflow-x: hidden;
 }
 
 b {
